Email integration - once user logs in - an email will be sent to the user with the verification link

--- a/src/main/resources/templates/twoFactorAuth.html
+++ b/src/main/resources/templates/twoFactorAuth.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-An SMS is sent to your registered mobile! Click on the link to verify the login.
+An Email with the verification link is sent to your registered email! Click on the link to verify the login.
 
 </body>
 </html>
